2008-05-10  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw_glossy.c:
	(clearlooks_glossy_draw_tab), (clearlooks_glossy_draw_slider),
	(clearlooks_glossy_draw_slider_button),
	(clearlooks_glossy_draw_scrollbar_stepper):
	Remove some 0.5 translations. The one in draw_tab is still there.

2008-05-10  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_shadow):
	Place the corner correctly.

2008-05-09  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_handle):
	Remove unused variable.

2008-05-09  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_gripdots):
	Fix gripdot placement.

2008-05-06  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_realize):
	Removed unused variables.

2008-05-06  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_box):
	Use the present steppers, not the slider position.

	* engines/clearlooks/src/support.c:
	(clearlooks_scrollbar_visible_steppers):
	If this is not a range, assume stepper A and D.

2008-05-06  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_realize):
	Comment out two broken and unneded lines.

2008-05-06  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_box):
	Only decrease the size of the scrollbar trough if the
	trough-under-steppers style property is set and steppers are present.
	Fixes bug #531633.

2008-05-01  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_scrollbar_stepper),
	(clearlooks_draw_scrollbar_slider):
	Removed dead code; one translation 0.5 less.

2008-05-01  Benjamin Berg  <benjamin@sipsolutions.net>
